package com.zsx.design.pattern.behavioral.state;

public interface State {

    void render();

    String publish();
}
